<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/label_pref_softkeyboard">
    <ListPreference
        app:key="@string/prefkey_use_softkey"
        app:title="ソフトウェアキーボードの使用"
        app:summary="「常に表示／非表示」が可能です"
        app:entries="@array/usesoftkey_entries"
        app:entryValues="@array/usesoftkey_values"
        app:defaultValue="auto"
        app:iconSpaceReserved="false"
        />
    <ListPreference
        app:key="@string/prefkey_flick_sensitivity2"
        app:title="フリック感度"
        app:summary="「高」にすると反応しやすくなります"
        app:entries="@array/sensitivity_entries"
        app:entryValues="@array/sensitivity_values"
        app:dialogTitle="フリック感度"
        app:defaultValue="mid"
        app:iconSpaceReserved="false"
        />
    <CheckBoxPreference
        app:key="@string/prefkey_use_popup"
        app:title="ポップアップの使用"
        app:summary="フリック入力用のガイドを表示します"
        app:disableDependentsState="false"
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        />
    <CheckBoxPreference
        app:key="@string/prefkey_fixed_popup"
        app:title="ポップアップの固定"
        app:summary="フリック入力ガイドを，常に上部の同じ場所に表示します"
        app:dependency="PrefKeyUsePopup"
        app:defaultValue="true"
        app:iconSpaceReserved="false"
        />
    <CheckBoxPreference
        app:key="@string/prefkey_use_soft_cancel_key"
        app:title="キャンセルキーの使用"
        app:summary="小文字キーのかわりにキャンセルキーを使います"
        app:defaultValue="false"
        app:iconSpaceReserved="false"
        />
<!--    <androidx.preference.SeekBarPreference-->
<!--        app:key="@string/prefkey_background_alpha"-->
<!--        app:title="背景の透明化"-->
<!--        app:summary="0で完全に透明になります"-->
<!--        app:defaultValue="100"-->
<!--        app:min="0"-->
<!--        android:max="100"-->
<!--        app:showSeekBarValue="true"-->
<!--        app:iconSpaceReserved="false"-->
<!--        />-->
    <androidx.preference.SeekBarPreference
        app:key="@string/prefkey_key_height_port"
        app:title="キーボードの高さ（縦画面）"
        app:summary="画面の高さに対する割合（％）"
        app:defaultValue="30"
        app:min="20"
        android:max="50"
        app:showSeekBarValue="true"
        app:iconSpaceReserved="false"
        />
    <androidx.preference.SeekBarPreference
        app:key="@string/prefkey_key_height_land"
        app:title="キーボードの高さ（横画面）"
        app:summary="画面の高さに対する割合（％）"
        app:defaultValue="30"
        app:min="20"
        android:max="50"
        app:showSeekBarValue="true"
        app:iconSpaceReserved="false"
        />
    <!--			seekbar:step="5"-->
    <androidx.preference.SeekBarPreference
        app:key="@string/prefkey_key_width_port"
        app:title="日本語キーボードの幅（縦画面）"
        app:summary="画面の高さに対する割合（％）"
        app:defaultValue="100"
        app:min="40"
        android:max="100"
        app:showSeekBarValue="true"
        app:iconSpaceReserved="false"
        />
    <!--			seekbar:step="5"-->
    <androidx.preference.SeekBarPreference
        app:key="@string/prefkey_key_width_land"
        app:title="日本語キーボードの幅（横画面）"
        app:summary="画面の高さに対する割合（％）"
        app:defaultValue="100"
        app:min="40"
        android:max="100"
        app:showSeekBarValue="true"
        app:iconSpaceReserved="false"
        />
    <ListPreference
        app:key="@string/prefkey_key_position"
        app:title="日本語キーボードの位置"
        app:summary="左右に寄せることができます"
        app:entries="@array/position_entries"
        app:entryValues="@array/position_values"
        app:dialogTitle="日本語キーボードの位置"
        app:defaultValue="center"
        app:showSeekBarValue="true"
        app:iconSpaceReserved="false"
        />
</PreferenceScreen>
